GMM_Main/src/objects/Grant_Close_Out__c.object
<CustomObject>
    <fields>
        <fullName>AR_Email__c</fullName>
        <label>AR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advanced_Momentum1__c</fullName>
        <formula>Advanced_Momentum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advanced_Momentum__c</fullName>
        <label>Advanced (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assign_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Momentum1__c</fullName>
        <formula>Authorized_Momentum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_Momentum__c</fullName>
        <label>Authorized (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Reporting_Requirements_Met__c</fullName>
        <label>Award Reporting Requirements Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Project__c</fullName>
        <label>Close Project?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closeout_Deobligation_Momentum1__c</fullName>
        <formula>Closeout_Deobligation_Momentum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closeout Deobligation (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closeout_Deobligation_Momentum__c</fullName>
        <label>Closeout Deobligation (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closeout_Reporting_Requirements_Met__c</fullName>
        <label>Closeout Reporting Requirements Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Balance_Outstanding_Amount__c</fullName>
        <label>Cost Share Balance Outstanding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Balance_Outstanding__c</fullName>
        <label>Cost Share Balance Outstanding</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cumulative_Award__c</fullName>
        <formula>Master_Award__r.Obligation__c</formula>
        <label>Cumulative Award</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Funds_Deobligated1__c</fullName>
        <formula>Date_Funds_Deobligated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Funds Deobligated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Funds_Deobligated__c</fullName>
        <label>Date Funds Deobligated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deobligated_at_Closeout__c</fullName>
        <label>Deobligated at Closeout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Momentum_SF_425__c</fullName>
        <label>Disbursed (Momentum(SF-425))</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Momentum_SF_425_n__c</fullName>
        <formula>Disbursed_Momentum_SF_425__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursed (Momentum(SF-425))</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Closeout__c</fullName>
        <formula>IF( Master_Award__r.Number_of_Amended_Awards__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Closeout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAIN__c</fullName>
        <formula>Master_Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Closed_Amount__c</fullName>
        <label>Final Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Closeout_Date__c</fullName>
        <label>Financial Closeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GO_Phone__c</fullName>
        <formula>Master_Award__r.GO_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Title__c</fullName>
        <formula>Master_Award__r.GO_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Close_Out_Date__c</fullName>
        <label>Grant Close Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <formula>Master_Award__r.Application__r.Name</formula>
        <label>Grant Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <formula>Master_Award__r.Grant_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <formula>Master_Award__r.Award_ID__c</formula>
        <label>Grant #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grantee_Match_per_Budget1__c</fullName>
        <formula>Grantee_Match_per_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Match per Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grantee_Match_per_Budget__c</fullName>
        <label>Grantee Match per Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grantee_Match_per_Final_FFR1__c</fullName>
        <formula>Grantee_Match_per_Final_FFR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Match per Final FFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grantee_Match_per_Final_FFR__c</fullName>
        <label>Grantee Match per Final FFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grants_Officer_Comments__c</fullName>
        <label>Grants Officer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grants_Officer_Email__c</fullName>
        <label>Grants Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <formula>Master_Award__r.Grants_Officer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grants Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Applicant_Name__c</fullName>
        <formula>Master_Award__r.Legal_Applicant_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Award__c</fullName>
        <label>Federal Award Identification Number</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Grants Close Out</relationshipLabel>
        <relationshipName>Grants_Close_Out</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Members_Exited_From_System__c</fullName>
        <label>Members Exited From System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Amended_Awards__c</fullName>
        <formula>Master_Award__r.Number_of_Amended_Awards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Amended Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Monitoring_Activities__c</fullName>
        <formula>Master_Award__r.Number_of_Open_Monitoring_Activities__c</formula>
        <label>Open Monitoring Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Address__c</fullName>
        <formula>Master_Award__r.Org_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <formula>Master_Award__r.Org_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Advance_Momentum1__c</fullName>
        <formula>Outstanding_Advance_Momentum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Advance (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Advance_Momentum__c</fullName>
        <label>Outstanding Advance (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PD_Email__c</fullName>
        <label>PD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Certified_Date__c</fullName>
        <label>PO Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <label>PO Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Officer_Email__c</fullName>
        <label>Program Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <formula>Master_Award__r.Program_Officer__c</formula>
        <label>Program Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_Officer_Comments__c</fullName>
        <label>Programs Officer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Director_Name__c</fullName>
        <formula>Master_Award__r.Project_Director_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Director_Title__c</fullName>
        <formula>Master_Award__r.Project_Director_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Master_Award__r.Project__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Period_End_Date__c</fullName>
        <formula>Master_Award__r.Project_Period_End_date__c</formula>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Period_Start_Date__c</fullName>
        <formula>Master_Award__r.Project_Period_Start_Date__c</formula>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Closeout Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Momentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Certified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Expenditure_Final_FFR_SF__c</fullName>
        <label>Total Federal Expenditure (Final FFR (SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Expenditure_Final_FFR_SF_n__c</fullName>
        <formula>Total_Federal_Expenditure_Final_FFR_SF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Federal Expenditure (Final FFR (SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_Amount__c</fullName>
        <label>Total Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unexpended_Amount__c</fullName>
        <label>Total Unexpended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Expense_Momentum1__c</fullName>
        <formula>Unpaid_Expense_Momentum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Expense (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Expense_Momentum__c</fullName>
        <label>Unpaid Expense (Momentum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waiver_Approved__c</fullName>
        <label>Waiver Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test_grant_number__c</fullName>
        <label>grant number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Grant Close Out</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grant__c</columns>
        <columns>Master_Award__c</columns>
        <columns>Org_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Grant_Close_Out_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>GO_Group</group>
            <group>PO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Close_Project</fullName>
        <columns>NAME</columns>
        <columns>Grant__c</columns>
        <columns>Master_Award__c</columns>
        <columns>Close_Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Grant_Close_Out_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Close Project</label>
        <sharedTo>
            <group>GO_Group</group>
            <group>PO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GCO-{00000}</displayFormat>
        <label>Grant Closeout Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants Close Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CostShareBalanceAmount</fullName>
        <active>false</active>
        <errorConditionFormula>IF( OR(Cost_Share_Balance_Outstanding_Amount__c &gt;0,ISBLANK(Cost_Share_Balance_Outstanding_Amount__c)) &amp;&amp; ISPICKVAL(Status__c,&apos;Closed&apos;),True, False)</errorConditionFormula>
        <errorDisplayField>Cost_Share_Balance_Outstanding_Amount__c</errorDisplayField>
        <errorMessage>Cost Share Amount should be equal to Zero to Close a Grant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CostShareOutStanding</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  ISPICKVAL( Status__c , &apos;Closed&apos;)  &amp;&amp; ISPICKVAL(Cost_Share_Balance_Outstanding__c,&apos;No&apos;),True,False)</errorConditionFormula>
        <errorDisplayField>Cost_Share_Balance_Outstanding__c</errorDisplayField>
        <errorMessage>Cost share balance is outstanding. Please make sure that there is no outstanding costshare balance before closing this grant</errorMessage>
    </validationRules>
</CustomObject>